# anomaly-detection-system

./: Makefile  README.md  pyproject.toml
anomaly_server/: main.py
front-end/: index.html
generator_server/: main.py  pyproject.toml
